apps/nextcloud/nextcloud/resources/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
spec:
  headers:
    customResponseHeaders:
      Strict-Transport-Security: "max-age=15552000; includeSubDomains"
    sslRedirect: true
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
