apps/nextcloud/nextcloud/resources/collabora-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`collabora.${DOMAIN}`)"
      priority: 10
      services:
        - name: nextcloud-collabora
          port: 9980
