apps/nextcloud/nextcloud/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`nextcloud.${DOMAIN}`)"
      priority: 10
      services:
        - name: nextcloud
          port: 8080
